# locallink

./: .gitignore  Cargo.toml  PRODUCTION_READINESS.md  README.md  deny.toml  phase10_space_ownership_ui_fix.sh  phase12_trash_icon_removed_space_fix.sh  phase12_trash_icon_removed_space_fix_v2.sh  phase9_core_invite_transport_patch.sh
.github/workflows/: ci.yml
addons/: README.md
addons/clipboard-sync/: Cargo.toml  manifest.json
addons/clipboard-sync/src/: main.rs
addons/echo/: manifest.json
addons/space-probe/: manifest.json
addons/space-probe/src/: main.rs
assets/: locallink-tray.ico.b64  locallink.ico.b64
docs/: ARCHITECTURE.md  LOCAL_LINK_GUIDE.md  REDESIGN_PROGRESS.md  STARTUP_ARCHITECTURE.md  diagnostics-debugging.md  space-probe-debugging.md  space-sync-design.md
locallink-addon-clipboard/: Cargo.toml  build.rs
locallink-addon-echo/: Cargo.toml  build.rs
locallink-addon-echo/src/: main.rs
locallink-addon-space-probe/: Cargo.toml
locallink-core/: Cargo.toml  build.rs  build_phase14.rs
locallink-core/src/: addons.rs  api.rs  api_client.rs  config.rs  core_state.rs  diagnostics.rs  discovery.rs  main.rs  protocol.rs  space_commands.rs  space_core_plan.rs  space_instance_state.rs  space_instances.rs  space_membership.rs  space_runtime.rs  space_sync.rs  space_sync_live.rs  spaces.rs  transport.rs
locallink-tray/: Cargo.toml
locallink-tray/src/: main.rs
locallink-ui/: Cargo.toml  build.rs  build_phase14_ui.rs  build_phase17_ui.rs  build_scroll_patch.rs
locallink-ui/src/: controller_main.rs  core_control_main.rs  debugger_main.rs  main.rs  space_control_main.rs
scripts/: api.ps1  build-release.ps1  build-run.sh  build.sh  debugger.sh  install-addons.ps1  install-example-addon.ps1  kill-core.sh  launch  run-core.ps1  run.sh  setup-dev.sh  show-logs.ps1  windows-network-check.ps1  windows-network-repair.ps1  windows-network-setup.ps1
src/: api.rs  api_client.rs  config.rs  discovery.rs
