[package]
name = "locallink-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
chacha20poly1305 = "0.10"
fs2 = "0.4"
