[package]
name = "locallink-ui"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "locallink-ui"
path = "src/core_control_main.rs"

[lints.clippy]
manual_is_multiple_of = "allow"
manual_clamp = "allow"
collapsible_if = "allow"

[dependencies]
anyhow = "1"
eframe = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.build-dependencies]
base64 = "0.22"
winresource = "0.1"
