[package]
name = "locallink-ui"
version = "0.1.0"
edition = "2021"
build = "build_scroll_patch.rs"

[[bin]]
name = "locallink-ui"
path = "src/core_control_main.rs"

[[bin]]
name = "locallink-debugger"
path = "src/debugger_main.rs"

[dependencies]
anyhow = "1"
eframe = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.build-dependencies]
base64 = "0.22"
winresource = "0.1"
